.htaccess now supports expires data, gzip compression output and many minor changes. Added a cache and minify options for css files

--- a/public/css/theme-cool.css
+++ b/public/css/theme-cool.css
@@ -17,6 +17,10 @@ ul li, ol li {
 	margin: 4px 0;
 }
 
+strong {
+	font-weight: bold;
+}
+
 .window {
 	border-radius: 6px;
 	-moz-border-radius: 6px;
