--- a/app/views/layout/page.xml
+++ b/app/views/layout/page.xml
@@ -12,24 +12,25 @@
 	<default>
 		<block type="page/html" name="root" template="page/main.php">
 			<block type="page/html/head" name="head" template="page/html/head.php">
-				<action method="addJs"><script>public/js/jquery-1.4.3.min.js</script></action>
 				<action method="addCss"><stylesheet>public/css/reset.css</stylesheet></action>
 				<action method="addCss"><stylesheet>public/css/style.css</stylesheet></action>
 				<action method="addCss"><stylesheet>public/css/theme-cool.css</stylesheet></action>
+				<action method="addJs"><script>public/js/jquery-1.5.min.js</script></action>
+				<action method="addJs"><script>public/js/ajax_calls.js</script></action>
 			</block>
-			<block type="test" name="header" template="page/header.php">
-				<block type="test" name="mainmenu" template="page/header/mainmenu.php" />
+			<block type="base" name="header" template="page/html/header.php">
+				<block type="base" name="mainmenu" template="page/html/header/mainmenu.php" />
 			</block>
-			<block type="test" name="left">
-				<block type="test" name="ads" />
-				<block type="test" name="menu" template="page/left/menu.php">
-					<block type="test" name="left.mainmenu" template="page/left/menu/mainmenu.php"/>
-					<block type="test" name="left.submenu" />
+			<block type="base" name="left">
+				<block type="base" name="ads" />
+				<block type="base" name="menu" template="page/left/menu.php">
+					<block type="base" name="left.mainmenu" template="page/left/menu/mainmenu.php"/>
+					<block type="base" name="left.submenu" />
 				</block>
 			</block>
-			<block type="test" name="right" />
-			<block type="test" name="content" template="cms/content.php"/>
-			<block type="test" name="footer" template="page/footer.php"/>
+			<block type="base" name="right" />
+			<block type="base" name="content" template="cms/content.php"/>
+			<block type="base" name="footer" template="page/footer.php"/>
 		</block>
 	</default>
 
@@ -58,6 +59,9 @@
 	<cms_ajax>
 		<reference name="root">
 			<action method="setTemplate"><template>page/2col.php</template></action>
+		</reference>
+		<reference name="head">
+			<action method="removeCss"><stylesheet>public/css/theme-cool.css</stylesheet></action>
 		</reference>
 		<reference name="right">
 			<action method="setTemplate"><template>page/right2.php</template></action>
