--- a/app/views/layout/page.xml
+++ b/app/views/layout/page.xml
@@ -10,32 +10,33 @@
 
 <layout version="1.0">
 	<default>
-		<block type="page/html" name="root" template="page/main.php">
-			<block type="page/html/head" name="head" template="page/html/head.php">
+		<block type="page/html" name="root" template="page/main.phtml">
+			<block type="page/html/head" name="head" template="page/html/head.phtml">
 				<action method="addCss"><stylesheet>public/css/reset.css</stylesheet></action>
 				<action method="addCss"><stylesheet>public/css/style.css</stylesheet></action>
 				<action method="addCss"><stylesheet>public/css/theme-cool.css</stylesheet></action>
 				<action method="addJs"><script>public/js/jquery-1.5.min.js</script></action>
 				<action method="addJs"><script>public/js/ajax_calls.js</script></action>
+				<action method="setTitle"><title>Welcome to ZeroG v1</title></action>
 			</block>
-			<block type="base" name="header" template="page/html/header.php">
-				<block type="base" name="mainmenu" template="page/html/header/mainmenu.php" />
+			<block type="base" name="header" template="page/html/header.phtml">
+				<block type="base" name="mainmenu" template="page/html/header/mainmenu.phtml" />
 			</block>
 			<block type="base" name="left">
 				<block type="base" name="ads" />
-				<block type="base" name="menu" template="page/left/menu.php">
-					<block type="base" name="left.mainmenu" template="page/left/menu/mainmenu.php"/>
+				<block type="base" name="menu" template="page/left/menu.phtml">
+					<block type="base" name="left.mainmenu" template="page/left/menu/mainmenu.phtml"/>
 					<block type="base" name="left.submenu" />
 				</block>
 			</block>
 			<block type="base" name="right" />
-			<block type="base" name="content" template="cms/content.php"/>
-			<block type="base" name="footer" template="page/footer.php"/>
+			<block type="base" name="content" template="cms/content.phtml"/>
+			<block type="base" name="footer" template="page/footer.phtml"/>
 		</block>
 	</default>
 
 	<print>
-		<block type="page/html" name="root" template="page/print.php">
+		<block type="page/html" name="root" template="page/print.phtml">
 			<action method="addCss"><stylesheet>public/css/print.css</stylesheet><params>media="print"</params></action>
 		</block>
 	</print>
@@ -46,25 +47,26 @@
 			<block type="reference" name="reference" />
 		</reference>-->
 		<reference name="root">
-			<action method="setTemplate"><template>page/1col.php</template></action>
+			<action method="setTemplate"><template>page/1col.phtml</template></action>
 		</reference>
 		<reference name="left">
 			<action method="unsetChild"><name>menu</name></action>
 		</reference>
 		<reference name="right">
-			<action method="setTemplate"><template>page/right.php</template></action>
+			<action method="setTemplate"><template>page/right.phtml</template></action>
 		</reference>
 	</cms_index>
 
 	<cms_ajax>
 		<reference name="root">
-			<action method="setTemplate"><template>page/2col.php</template></action>
+			<action method="setTemplate"><template>page/2col.phtml</template></action>
 		</reference>
 		<reference name="head">
 			<action method="removeCss"><stylesheet>public/css/theme-cool.css</stylesheet></action>
+			<action method="setTitle"><title>Ajax page</title></action>
 		</reference>
 		<reference name="right">
-			<action method="setTemplate"><template>page/right2.php</template></action>
+			<action method="setTemplate"><template>page/right2.phtml</template></action>
 		</reference>
 		<!--<reference name="root.left">
 			<action method="unsetChild"><name>root.left.menu</name></action>
