--- a/app/views/blocks/page/html/header/mainmenu.phtml
+++ b/app/views/blocks/page/html/header/mainmenu.phtml
@@ -1,5 +1,5 @@
 <h3><?php echo \Z::__('Different column layouts', 'cms'); ?></h3>
-<?php echo \Sys\Helper\Html::link('cms/index', 'CMS index'); ?> |
-<?php echo \Sys\Helper\Html::link('cms/ajax', '1 column'); ?> |
-<?php echo \Sys\Helper\Html::link('cms/ajax2', '2 columns'); ?> |
-<?php echo \Sys\Helper\Html::link('cms/ajax', 'Ajax call', 'id="ajax1"'); ?>
+<?php echo \Z::getHelper('Sys\Helper\Html')->link('cms/index', 'CMS index'); ?> |
+<?php echo \Z::getHelper('Sys\Helper\Html')->link('cms/ajax', '1 column'); ?> |
+<?php echo \Z::getHelper('Sys\Helper\Html')->link('cms/ajax2', '2 columns'); ?> |
+<?php echo \Z::getHelper('Sys\Helper\Html')->link('cms/ajax', 'Ajax call', 'id="ajax1"'); ?>
