--- a/app/design/frontend/default/mobile/template/page/html/head.phtml
+++ b/app/design/frontend/default/mobile/template/page/html/head.phtml
@@ -1,5 +1,6 @@
 <meta charset="utf-8" />
 <title><?php echo $this->getTitle();?></title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <base href="<?php echo \Z::getConfig('config/global/default/base/url'); ?>"/>
 <?php echo $this->getCss(); ?>
 <?php echo $this->getJs(); ?>
