--- a/app/design/frontend/default/mobile/template/page/html/header.phtml
+++ b/app/design/frontend/default/mobile/template/page/html/header.phtml
@@ -1,4 +1,3 @@
-						<div class="message notice">
-							<?php echo $this->getChildHtml('mainmenu');?>
-							<p><?php echo \Z::L()->getDate('D  => l, d/m (F)/Y M | H:i:s'); ?></p>
-						</div>
+<h1><?php echo $this->__('ZeroG Mobile Skin'); ?></h1>
+<a href="index.html" data-icon="gear" class="ui-btn-right"><?php echo $this->__('Options'); ?></a>
+<?php echo $this->getChildHtml('mainmenu');?>
