--- a/app/design/frontend/default/mobile/template/page/html/footer.phtml
+++ b/app/design/frontend/default/mobile/template/page/html/footer.phtml
@@ -1,3 +1,8 @@
-						<div class="message attention">
-							<?php print_r(\Z::getParams());?>
-						</div>
+<div data-role="navbar">
+	<ul>
+		<li><a data-icon="home" href="<?php echo $this->getUrl('page/view/index'); ?>"><?php echo $this->__('Home'); ?></a></li>
+		<li><a data-icon="star" href="<?php echo $this->getUrl('page/view/extensions'); ?>"><?php echo $this->__('Extensions'); ?></a></li>
+		<li><a data-icon="info" href="<?php echo $this->getUrl('page/view/documentation'); ?>"><?php echo $this->__('Documentation'); ?></a></li>
+		<li><a data-icon="arrow-d" href="<?php echo $this->getUrl('page/view/download'); ?>"><?php echo $this->__('Download'); ?></a></li>
+	</ul>
+</div>
