Redefined the Resource and Model class, completed the sql installer and Request class

--- a/app/design/frontend/default/mobile/template/page/content/home.phtml
+++ b/app/design/frontend/default/mobile/template/page/content/home.phtml
@@ -1,4 +1,13 @@
+<?php var_dump(\Z::getRequest()->getParams());?>
 <a data-role="button" href="#messages" data-rel="dialog"><?php echo $this->__('Open the popup'); ?></a>
+<form method="post" action="<?php echo $this->getUrl('page/view/index'); ?>">
+	<h2>Test form</h2>
+	<div data-role="fieldcontain">
+		<label for="testInput">Test POST</label>
+		<input type="text" name="testInput" id="testInput" />
+	</div>
+	<input type="submit" name="testSubmit" value="Send"/>
+</form>
 <h2>ZeroG Features</h2>
 <div data-role="collapsible">
    <h3><?php echo $this->__('PHP 5.3 support (namespaces, SPL, etc)'); ?></h3>
