--- a/app/design/frontend/default/default/template/page/html/footer.phtml
+++ b/app/design/frontend/default/default/template/page/html/footer.phtml
@@ -1,3 +1,3 @@
 						<div class="message attention">
-							<?php print_r(\Z::getParams());?>
+							<?php print_r(\Z::getRequest()->getParams());?>
 						</div>
