Enhanced admin support

--- a/app/design/adminhtml/default/default/layout/blog.xml
+++ b/app/design/adminhtml/default/default/layout/blog.xml
@@ -12,18 +12,23 @@
 
 	<blog_admin_admin_list>
 		<reference name="root">
-			<action method="setTemplate"><template>page/1column.phtml</template></action>
+			<action method="setTemplate"><template>page/2columns.phtml</template></action>
 		</reference>
 		<remove name="footer" />
 		<reference name="content">
 			<block type="blog/admin/grid/posts" name="widget.grid" />
 		</reference>
 		<reference name="right">
-			<block type="core/base" name="page.right" template="page/html/right.phtml" />
+			<block type="core/base" name="blog.right" template="blog/right.phtml" />
 		</reference>
 		<!--<reference name="status_bar.right">
 			<block type="admin/page/statusBar/item" template="test/item_right_1.phtml" />
 		</reference>-->
 	</blog_admin_admin_list>
+
+	<!-- Grid Reload/apply filters Ajax call -->
+	<blog_admin_admin_list_grid>
+		<block type="blog/admin/grid/posts" name="root"/>
+	</blog_admin_admin_list_grid>
 
 </layout>
