--- a/app/design/adminhtml/default/default/template/page/html/header.phtml
+++ b/app/design/adminhtml/default/default/template/page/html/header.phtml
@@ -1,5 +1,8 @@
 <div class="inner">
-<h1><a href=""><img src="<?php echo $this->getSkinUrl('images/logo.png'); ?>" /></a></h1>
+<h1>
+	<a href=""><img src="<?php echo $this->getSkinUrl('images/logo.png'); ?>" /></a>
+	<span id="ajax_worker" style="display: none"><img src="<?php echo $this->getSkinUrl('images/ajax-loader.gif'); ?>" alt=""/></span>
+</h1>
 <div id="header_nav">
 	<div class="header_nav_wrap">
 		<div class="avatar">
