--- a/app/design/adminhtml/default/default/template/widget/grid.phtml
+++ b/app/design/adminhtml/default/default/template/widget/grid.phtml
@@ -1,15 +1,60 @@
+<div class="grid" id="grid_<?php echo $this->getId(); ?>">
 <div class="grid-header">
 	<div class="widget_grid_buttons">
 		<?php echo $this->getHeader()->getButtonsHtml(); ?>
 	</div>
 	<h1><?php echo $this->getHeader()->getTitle(); ?></h1>
 </div>
+<form method="post" action="<?php echo $this->getUrl('blog_admin/admin_list/grid');?>" id="widget_form_<?php echo $this->getId(); ?>">
+<table class="widget_grid_pager">
+	<td>
+		<?php echo $this->__('Page') ?>
+		<?php $_curPage  = $this->getCollection()->getCurPage(); ?>
+		<?php $_lastPage = $this->getCollection()->getLastPageNumber(); ?>
+		<?php if($_curPage>1): ?>
+			<a href="#" title="<?php echo $this->__('Previous page') ?>" onclick=""><img src="<?php echo $this->getSkinUrl('images/icons/arrow_prev.png') ?>" alt="<?php echo $this->__('Go to previous page') ?>" class="arrow"/></a>
+		<?php else: ?>
+			<img src="<?php echo $this->getSkinUrl('images/icons/arrow_prev_dis.png') ?>" alt="<?php echo $this->__('Go to previous page') ?>" class="arrow"/>
+		<?php endif; ?>
+
+		<input type="text" name="<?php echo $this->_varNamePage; ?>" class="input-text" size="3" value="<?php echo $_curPage ?>" class="input-text page" onkeypress=""/>
+
+		<?php if($_curPage < $_lastPage): ?>
+			<a href="#" title="<?php echo $this->__('Next page') ?>" onclick=""><img src="<?php echo $this->getSkinUrl('images/icons/arrow_next.png') ?>" alt="Go to Next page" class="arrow"/></a>
+		<?php else: ?>
+			<img src="<?php echo $this->getSkinUrl('images/icons/arrow_next_dis.png') ?>" alt="<?php echo $this->__('Go to next page') ?>" class="arrow"/>
+		<?php endif; ?>
+
+		<?php echo $this->__('of '.$_lastPage.' pages'); ?>
+
+            <span class="separator">|</span>
+            <?php echo $this->__('View') ?>
+            <select name="<?php echo $this->_varNameLimit; ?>" onchange="">
+                <option value="10"<?php if($this->getCollection()->getPageSize()==10): ?> selected="selected"<?php endif; ?>>10</option>
+                <option value="20"<?php if($this->getCollection()->getPageSize()==20): ?> selected="selected"<?php endif; ?>>20</option>
+                <option value="30"<?php if($this->getCollection()->getPageSize()==30): ?> selected="selected"<?php endif; ?>>30</option>
+                <option value="40"<?php if($this->getCollection()->getPageSize()==40): ?> selected="selected"<?php endif; ?>>40</option>
+                <option value="50"<?php if($this->getCollection()->getPageSize()==50): ?> selected="selected"<?php endif; ?>>50</option>
+            </select>
+            <?php echo $this->__('per page') ?><span class="separator">|</span>
+
+		<?php echo $this->__('Total %d records found', $this->getCollection()->getSize()) ?>
+	</td>
+	<td class="export a-right">
+		<img src="<?php echo $this->getSkinUrl('images/icon_export.gif') ?>" alt="" class="v-middle"/>&nbsp; <?php echo $this->__('Export to:') ?>
+		<select name="<?php echo $this->getId() ?>_export" id="<?php echo $this->getId() ?>_export" style="width:8em;">
+			<option value="empty">Export option</option>
+		</select>
+		<?php echo $this->getExportButtonHtml() ?>
+	</td>
+	<td class="a-right"><input type="submit" value="<?php echo $this->__('Search'); ?>" /></td>
+</table>
 <table class="widget_grid" id="<?php echo $this->getId(); ?>">
 	<?php foreach ($this->getColumns() as $_column): ?>
 	<col <?php echo $_column->getHeaderProperty(); ?>/>
 	<?php endforeach; ?>
 	<thead>
-		<tr>
+		<tr class="columns">
 			<?php foreach ($this->getColumns() as $_column): ?>
 			<th class="grid_column_header"><?php echo $_column->getHeader(); ?></th>
 			<?php endforeach; ?>
@@ -33,3 +78,19 @@
 		<?php endif; ?>
 	</tbody>
 </table>
+</form>
+</div>
+<script type="text/javascript">
+$('#widget_form_<?php echo $this->getId(); ?>').submit(function()
+{
+	var options = {
+		target: '#grid_<?php echo $this->getId(); ?>',
+		beforeSubmit: showAjaxRequest,
+		success: hideAjaxRequest,
+		};
+	$(this).ajaxSubmit(options);
+	 //!!! Important !!!
+	 // always return false to prevent standard browser submit and page navigation
+	 return false;
+});
+</script>
