--- a/app/design/adminhtml/default/default/template/widget/grid.phtml
+++ b/app/design/adminhtml/default/default/template/widget/grid.phtml
@@ -42,7 +42,7 @@
 				<?php echo $this->helper('admin')->__('Total %d records found', $this->getCollection()->getSize()) ?>
 			</td>
 			<td class="export a-right">
-				<img src="<?php echo $this->getSkinUrl('images/icon_export.gif') ?>" alt="" class="v-middle"/>&nbsp; <?php echo $this->helper('admin')->__('Export to:') ?>
+				<img src="<?php echo $this->getSkinUrl('images/icons/export.png') ?>" alt="" class="v-middle"/>&nbsp; <?php echo $this->helper('admin')->__('Export to:') ?>
 				<select name="<?php echo $this->getHtmlId() ?>_export" id="<?php echo $this->getHtmlId() ?>_export" style="width:8em;">
 					<option value="empty">Export option</option>
 				</select>
