--- a/app/design/adminhtml/default/default/layout/blog.xml
+++ b/app/design/adminhtml/default/default/layout/blog.xml
@@ -18,7 +18,7 @@
 
 	<blog_admin_admin_list_posts>
 		<reference name="root">
-			<action method="setTemplate"><template>page/2columns.phtml</template></action>
+			<action method="setTemplate"><template>page/2columns-right.phtml</template></action>
 		</reference>
 		<remove name="footer" />
 		<reference name="content">
