--- a/skin/adminhtml/default/default/css/admin.all.css
+++ b/skin/adminhtml/default/default/css/admin.all.css
@@ -99,6 +99,12 @@ ol li { padding-left: .5em; list-style: decimal;}
 	margin-right:-304px;
 }
 
+#content_left {
+	width: 280px;
+	float:left;
+	margin:0 0 5px 0;
+}
+
 .section {
 	border: 1px solid #0081D1;
 	background-color: #fefefe;
